public abstract class JoueurAbstrait {
}
