public class JoueurHumain {
}
