public class JoueurOrdinateur {
}
